# secure_memory

./: .gitignore  Cargo.toml  README.md  SECURITY_ANALYSIS.md  clippy.toml  rustfmt.toml
.github/: TPM_SIMULATOR_GUIDE.md
.github/workflows/: build.yml  ci.yml  publish-maven-central.yml
benches/: buffer_bench.rs
examples/: basic_usage.rs  secure_operations.rs
java/: .project  MEMORY_VERIFICATION.md  README.md  dependency-reduced-pom.xml  pom.xml  verify-memory-security.sh
java/examples/: README.md
java/examples/basic/: pom.xml
java/examples/basic/src/main/java/io/github/pilougit/security/examples/: Example.java  MemoryLeakDemo.java  MemorySecurityTester.java  WriteOnceExample.java
java/examples/springboot-example/: .factorypath  README.md
java/examples/springboot-example/src/main/java/io/github/pilougit/security/springboot/config/: NativeLibraryLoader.java  SecurePropertiesConfig.java
java/examples/springboot-example/src/main/java/io/github/pilougit/security/springboot/service/: SecureApiService.java  SecureDatabaseService.java
java/springboot-example/: .project  pom.xml
java/springboot-example/src/main/java/com/securememory/springboot/: SecureMemoryApplication.java
java/springboot-example/src/main/java/com/securememory/springboot/config/: NativeLibraryLoader.java  SecurePropertiesConfig.java
java/springboot-example/src/main/java/com/securememory/springboot/controller/: SecureMemoryController.java
java/springboot-example/src/main/java/com/securememory/springboot/service/: SecureApiService.java  SecureDatabaseService.java
java/springboot-example/src/main/java/io/github/pilougit/security/springboot/: SecureMemoryApplication.java
java/springboot-example/src/main/java/io/github/pilougit/security/springboot/controller/: SecureMemoryController.java
java/src/main/java/com/securememory/: Example.java  MemoryLeakDemo.java  MemorySecurityTester.java  NativeLibraryLoader.java  SecureMemory.java  SecureMemoryNative.java  WriteOnceExample.java
java/src/main/java/io/github/pilougit/security/: Example.java  MemoryLeakDemo.java  MemorySecurityTester.java  NativeLibraryLoader.java  SecureMemory.java  SecureMemoryNative.java  WriteOnceExample.java
java/src/test/java/com/securememory/: SecureMemoryTest.java
java/src/test/java/io/github/pilougit/security/: SecureMemoryTest.java
src/: anti_debug.rs  buffer.rs  crypto_service.rs  error.rs  lib.rs  main.rs  process_key_deriver.rs  secure_error.rs  secure_key.rs  secure_memory.rs  secure_memory_ffi.rs  tpm_process_auth.rs  tpm_service.rs  tpm_service_software.rs  tpmcrypto.rs  utils.rs
tests/: TPM_SECURITY.md  TPM_TESTING.md  aad_tamper_test.rs  integration_test.rs  sealed_data_object_test.rs  secure_memory_test.rs  test_tpm.rs  test_tpm_policy_auth.rs  test_tpm_policy_concept.rs  test_tpm_process_auth.rs  test_tpm_secure_auth.rs  test_tpmcrypto.rs  tpmcrypto_test.rs  write_once_test.rs
