[package]
name = "secure_memory"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Pilou"]
description = "A secure memory management library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/secure_memory"
documentation = "https://docs.rs/secure_memory"
readme = "README.md"
keywords = ["security", "memory", "crypto"]
categories = ["cryptography", "memory-management"]

[lib]
name = "secure_memory"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]  # rlib for Rust, cdylib for C-compatible FFI (Java/JNA)

[[bin]]
name = "secure_memory"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tss-esapi = "7.6.0"
rand="0.9.2"
zeroize="1.8.2"
aes-gcm = "0.10.3"
libc="0.2.177"
sha2 = "0.11.0-rc.2"
hkdf = "0.13.0-rc.2"
linux-keyutils = "0.2"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.0"

[features]
default = ["rsa"]
serde = ["dep:serde"]
async = ["dep:tokio"]

# Cryptographic algorithm selection
# Note: Only one can be active at a time
rsa = []                    # RSA-2048 (current default, classical security)
post-quantum = []           # Future: ML-KEM/Kyber (post-quantum secure)
hybrid = ["rsa"]            # Future: Hybrid RSA + PQ (transition mode)

# Development and testing
experimental = []           # Enable experimental features (unstable)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true
panic = "unwind"  # Nécessaire pour les tests avec should_panic

[profile.bench]
opt-level = 3
debug = false
lto = true
